run swagger without simplecov
